# AI-vs-ordinal-notations

./: .gitignore  ANALYSIS_TABLE.md  DAILY_LOG.md  MEMORY.md  Prompt.md  README.md  build_table.py  ns_bm4.py  ns_bm4_output.txt  ns_compute.py  ns_engine.py  ns_epsilon.py  ns_final.py  ns_fraction.py  ns_higher.py  ns_push.py  ns_reset.py  ns_veblen.py  stdout.txt  test_out2.txt  veblen_engine.py  veblen_f_guess.py  veblen_total.py
.workbuddy/memory/: 2026-07-18.md  MEMORY.md
programs/: CLI.md  CMakeLists.txt
programs/src/: expansion_tool.cpp
